[tool.poetry]
name = "SilverBot"
version = "0.0.1"
description = ""
authors = ["mxnty <silverbotbusiness@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fortnitepy = "^3.4.0"
crayons = "^0.4.0"
termcolor = "^1.1.0"
aioconsole = "^0.3.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
